Separate location to a single class.

--- a/missfit/missfit/Base.lproj/Main.storyboard
+++ b/missfit/missfit/Base.lproj/Main.storyboard
@@ -1209,26 +1209,26 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="300" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvW-pO-kp9">
-                                                            <rect key="frame" x="562" y="8" width="27.5" height="19.5"/>
+                                                            <rect key="frame" x="552" y="8" width="27.5" height="19.5"/>
                                                             <fontDescription key="fontDescription" type="italicSystem" pointSize="16"/>
                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3km" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgy-im-3Id">
-                                                            <rect key="frame" x="562" y="29" width="26" height="16"/>
+                                                            <rect key="frame" x="552.5" y="29" width="26" height="16"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="locating" translatesAutoresizingMaskIntoConstraints="NO" id="ujs-3F-Kbb">
-                                                            <rect key="frame" x="548" y="30" width="10" height="15"/>
+                                                            <rect key="frame" x="538.5" y="30" width="10" height="15"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="15" id="49t-Jh-PRx"/>
                                                                 <constraint firstAttribute="width" constant="10" id="E0i-YO-ocA"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPK-0s-Kya">
-                                                            <rect key="frame" x="549" y="8" width="9.5" height="20.5"/>
+                                                            <rect key="frame" x="538.5" y="8" width="10" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -1238,9 +1238,9 @@
                                                     <constraints>
                                                         <constraint firstItem="mQ1-dF-CBS" firstAttribute="leading" secondItem="BlJ-aT-lpB" secondAttribute="leading" constant="8" id="BmC-yf-oaI"/>
                                                         <constraint firstItem="ujs-3F-Kbb" firstAttribute="top" secondItem="MPK-0s-Kya" secondAttribute="bottom" constant="2" id="ErC-60-WU0"/>
-                                                        <constraint firstAttribute="trailing" secondItem="MPK-0s-Kya" secondAttribute="trailing" constant="42" id="IbK-fc-uEg"/>
+                                                        <constraint firstAttribute="trailing" secondItem="MPK-0s-Kya" secondAttribute="trailing" constant="52" id="IbK-fc-uEg"/>
                                                         <constraint firstItem="xrT-Vy-IOa" firstAttribute="top" secondItem="mQ1-dF-CBS" secondAttribute="bottom" constant="2" id="JSm-Kw-Jvj"/>
-                                                        <constraint firstAttribute="trailing" secondItem="ujs-3F-Kbb" secondAttribute="trailing" constant="42" id="KCA-5B-tmH"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ujs-3F-Kbb" secondAttribute="trailing" constant="52" id="KCA-5B-tmH"/>
                                                         <constraint firstItem="rgy-im-3Id" firstAttribute="centerY" secondItem="ujs-3F-Kbb" secondAttribute="centerY" constant="-0.5" id="PXo-la-ujV"/>
                                                         <constraint firstItem="rgy-im-3Id" firstAttribute="leading" secondItem="ujs-3F-Kbb" secondAttribute="trailing" constant="4" id="Z1o-39-Ses"/>
                                                         <constraint firstItem="MPK-0s-Kya" firstAttribute="top" secondItem="BlJ-aT-lpB" secondAttribute="top" constant="8" id="dAJ-dM-Ofp"/>
@@ -1300,7 +1300,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="特色课程" id="3sT-3q-YYe">
-                        <barButtonItem key="leftBarButtonItem" image="backBarBtnBg" id="S15-0m-1sm">
+                        <barButtonItem key="leftBarButtonItem" image="back_narrow" id="S15-0m-1sm">
                             <connections>
                                 <action selector="backButtonClicked:" destination="eob-og-iHW" id="gaa-ZH-JU8"/>
                             </connections>
